procjera pri registraciji povezana sa bazom

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<h1>Dobro došao/la <%= name %></h1>
+<h1>Dobro došao/la <%= email %></h1>
 <form action="/logout?_method=DELETE" method="POST">
     <button type="submit">Log out</button>
 </form>
