dodana post putanja za dodavanje korisnika

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,3 +2,5 @@
 <form action="/logout?_method=DELETE" method="POST">
     <button type="submit">Log out</button>
 </form>
+<a href="/users">Korisnici</a>
+<a href="/addUsers">Dodaj korisnike</a>
