--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,4 +3,4 @@
     <button type="submit">Log out</button>
 </form>
 <a href="/users">Korisnici</a>
-<a href="/addUsers">Dodaj korisnike</a>
+<a href="/users/add">Dodaj korisnike</a>
