--- a/views/addUser.ejs
+++ b/views/addUser.ejs
@@ -37,9 +37,9 @@
         </div>
 
         <div>
-            <p>pravo_pristupa</p><br>
+            <label>pravo_pristupa: </label>
             <label for="pravo_pristupa">ADMIN</label>
-            <input type="radio" name="pravo_pristupa" value="1" required /><br>
+            <input type="radio" name="pravo_pristupa" value="1" required />
             <label for="pravo_pristupa">UPOSLENIK</label>
             <input type="radio" name="pravo_pristupa" value="2" required />
         </div>
@@ -53,5 +53,5 @@
             <label for="password">Password</label>
             <input type="password" id="password" name="password" required />
         </div>
-        <button type="submit">Registruj osobu</button>
+        <button class="btn btn-success ml-2" type="submit">Registruj osobu</button>
     </form>
