--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,8 +1,8 @@
 <h1>Register</h1>
 <% if (messages.error) { %>
-<%= messages.error %>
+<div class="alert alert-danger"><%= messages.error %></div>
 <% } %>
-<form action="register" method="POST">
+<form action="register" method="POST" class="mb-2">
     <div>
         <label for="email">Email</label>
         <input type="email" id="email" name="email" required />
@@ -12,6 +12,6 @@
         <label for="password">Password</label>
         <input type="password" id="password" name="password" required />
     </div>
-    <button type="submit">Register</button>
+    <button class="ml-2 btn btn-primary" type="submit">Register</button>
 </form>
-<a href="/login">Login</a>
+<a href="/login"><button class="ml-2 btn btn-primary">Login</button></a>
